cmake_minimum_required(VERSION 2.8)
project( LaserRanging )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( LaserRanging LaserRanging.cpp capture_frame.cpp view_frame.cpp timer.cpp image_processing.cpp)
target_link_libraries( LaserRanging ${OpenCV_LIBS} )